update last query of Director of The Matrix

--- a/MongoDB_Homework.ipynb
+++ b/MongoDB_Homework.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "Database(MongoClient(host=['mongo:27017'], document_class=dict, tz_aware=False, connect=True), 'moviedb')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "Collection(Database(MongoClient(host=['mongo:27017'], document_class=dict, tz_aware=False, connect=True), 'moviedb'), 'actor')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,16 +123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7fe07f632320>"
+       "<pymongo.results.InsertManyResult at 0x7f4ae1727eb0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,9 +152,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertManyResult at 0x7f4af331e2f0>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### YOUR CODE HERE\n",
     "person_coll = db['person']\n",
@@ -170,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,16 +200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7fe06da37d60>"
+       "<pymongo.results.InsertManyResult at 0x7f4ae1727b20>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,16 +236,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7fe07f632470>"
+       "<pymongo.results.InsertManyResult at 0x7f4ae1727c10>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,17 +328,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('652ef009dc13bcf499be335e'), 'id': 1, 'name': 'Charlie Sheen'}\n",
-      "{'_id': ObjectId('652ef009dc13bcf499be335f'), 'id': 2, 'name': 'Michael Douglas'}\n",
-      "{'_id': ObjectId('652ef009dc13bcf499be3360'), 'id': 3, 'name': 'Martin Sheen'}\n",
-      "{'_id': ObjectId('652ef009dc13bcf499be3361'), 'id': 4, 'name': 'Morgan Freeman'}\n"
+      "{'_id': ObjectId('652f031be1c5f7d493dc68a1'), 'id': 1, 'name': 'Charlie Sheen'}\n",
+      "{'_id': ObjectId('652f031be1c5f7d493dc68a2'), 'id': 2, 'name': 'Michael Douglas'}\n",
+      "{'_id': ObjectId('652f031be1c5f7d493dc68a3'), 'id': 3, 'name': 'Martin Sheen'}\n",
+      "{'_id': ObjectId('652f031be1c5f7d493dc68a4'), 'id': 4, 'name': 'Morgan Freeman'}\n"
      ]
     }
    ],
@@ -347,16 +358,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.cursor.Cursor at 0x7fe0537300d0>"
+       "<pymongo.cursor.Cursor at 0x7f4ae14a2650>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +399,7 @@
       "{'title': 'The American President', 'year': 1995}\n",
       "{'title': 'The Shawshank Redemption', 'year': 1994}\n",
       "{'title': 'Wall Street', 'year': 1987}\n",
-      "Movies:  <pymongo.cursor.Cursor object at 0x7fe0538e3150>\n"
+      "Movies:  <pymongo.cursor.Cursor object at 0x7f4ae1495490>\n"
      ]
     }
    ],
@@ -411,15 +422,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('652ef011dc13bcf499be3364'), 'id': 3, 'title': 'The Shawshank Redemption', 'country': 'USA', 'year': 1994}\n",
-      "{'_id': ObjectId('652ef011dc13bcf499be3363'), 'id': 2, 'title': 'The American President', 'country': 'USA', 'year': 1995}\n"
+      "{'_id': ObjectId('652f0322e1c5f7d493dc68a7'), 'id': 3, 'title': 'The Shawshank Redemption', 'country': 'USA', 'year': 1994}\n",
+      "{'_id': ObjectId('652f0322e1c5f7d493dc68a6'), 'id': 2, 'title': 'The American President', 'country': 'USA', 'year': 1995}\n"
      ]
     }
    ],
@@ -451,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -523,8 +534,8 @@
      "text": [
       "{'_id': 'Charlie Sheen', 'count': 1}\n",
       "{'_id': 'Martin Sheen', 'count': 2}\n",
-      "{'_id': 'Morgan Freeman', 'count': 1}\n",
-      "{'_id': 'Michael Douglas', 'count': 2}\n"
+      "{'_id': 'Michael Douglas', 'count': 2}\n",
+      "{'_id': 'Morgan Freeman', 'count': 1}\n"
      ]
     }
    ],
@@ -580,16 +591,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': 'Michael Douglas', 'movies': ['Wall Street', 'The American President']}\n",
-      "{'_id': 'Martin Sheen', 'movies': ['Wall Street', 'The American President']}\n",
       "{'_id': 'Charlie Sheen', 'movies': ['Wall Street']}\n",
+      "{'_id': 'Martin Sheen', 'movies': ['Wall Street', 'The American President']}\n",
+      "{'_id': 'Michael Douglas', 'movies': ['Wall Street', 'The American President']}\n",
       "{'_id': 'Morgan Freeman', 'movies': ['The Shawshank Redemption']}\n"
      ]
     }
@@ -647,9 +658,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'actor': 'Charlie Sheen', 'movie': 'Wall Street', 'role': ['Bud Fox']}\n",
+      "{'actor': 'Michael Douglas', 'movie': 'Wall Street', 'role': ['Carl Fox']}\n",
+      "{'actor': 'Martin Sheen', 'movie': 'Wall Street', 'role': ['Gordon Gekko']}\n"
+     ]
+    }
+   ],
    "source": [
     "###YOUR CODE HERE\n",
     "results = actor_coll.aggregate([\n",
@@ -702,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -800,15 +821,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall Street:  {'_id': ObjectId('652ef011dc13bcf499be3362'), 'id': 1, 'title': 'Wall Street', 'country': 'USA', 'year': 1987}\n",
-      "After update, Wall Street:  {'_id': ObjectId('652ef011dc13bcf499be3362'), 'id': 1, 'title': 'Wall Street', 'country': 'USA', 'year': 2000}\n"
+      "Wall Street:  {'_id': ObjectId('652f0322e1c5f7d493dc68a5'), 'id': 1, 'title': 'Wall Street', 'country': 'USA', 'year': 1987}\n",
+      "After update, Wall Street:  {'_id': ObjectId('652f0322e1c5f7d493dc68a5'), 'id': 1, 'title': 'Wall Street', 'country': 'USA', 'year': 2000}\n"
      ]
     }
    ],
@@ -834,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -897,16 +918,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x7fe0538af130>"
+       "<pymongo.results.InsertOneResult at 0x7f4af331da50>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,16 +949,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7fe0538aefb0>"
+       "<pymongo.results.InsertManyResult at 0x7f4ae1727c40>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +973,8 @@
     "]\n",
     "\n",
     "###YOUR CODE HERE\n",
-    "actor_coll.insert_many(newActorList)"
+    "actor_coll.insert_many(newActorList)\n",
+    "person_coll.insert_many(newActorList)"
    ]
   },
   {
@@ -964,16 +986,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7fe0538af0d0>"
+       "<pymongo.results.InsertManyResult at 0x7f4af331d480>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,8 +1003,8 @@
    "source": [
     "###YOUR CODE HERE\n",
     "directorList = [\n",
-    "  { \"id\": 1, \"name\": \"Lana Wachowski\", \"born\":1965, \"label\": \"Director\"},\n",
-    "  { \"id\": 2, \"name\": \"Lilly Wachowski\", \"born\":1967, \"label\": \"Director\"}\n",
+    "  { \"id\": 9, \"name\": \"Lana Wachowski\", \"born\":1965, \"label\": \"Director\"},\n",
+    "  { \"id\": 10, \"name\": \"Lilly Wachowski\", \"born\":1967, \"label\": \"Director\"}\n",
     "]\n",
     "\n",
     "person_coll.insert_many(directorList)"
@@ -997,16 +1019,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7fe0538afbe0>"
+       "<pymongo.results.InsertManyResult at 0x7f4ae1727b50>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,10 +1037,10 @@
     "###YOUR CODE HERE\n",
     "directed_coll = db['directed']\n",
     "directedList = [\n",
-    "  { \"directorId\": 1, \"movieId\": 4},\n",
-    "  { \"directorId\": 2, \"movieId\": 4}\n",
+    "  { \"directorId\": 9, \"movieId\": 4},\n",
+    "  { \"directorId\": 10, \"movieId\": 4}\n",
     "]\n",
-    "person_coll.insert_many(directedList)"
+    "directed_coll.insert_many(directedList)"
    ]
   },
   {
@@ -1030,15 +1052,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('652f009edc13bcf499be3370'), 'id': 1, 'name': 'Lana Wachowski', 'born': 1965, 'label': 'Director'}\n",
-      "{'_id': ObjectId('652f009edc13bcf499be3371'), 'id': 2, 'name': 'Lilly Wachowski', 'born': 1967, 'label': 'Director'}\n"
+      "{'_id': ObjectId('652f03b6e1c5f7d493dc68b3'), 'id': 9, 'name': 'Lana Wachowski', 'born': 1965, 'label': 'Director'}\n",
+      "{'_id': ObjectId('652f03b6e1c5f7d493dc68b4'), 'id': 10, 'name': 'Lilly Wachowski', 'born': 1967, 'label': 'Director'}\n"
      ]
     }
    ],
@@ -1060,9 +1082,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'director': 'Lana Wachowski', 'movie': 1965}\n",
+      "{'director': 'Lilly Wachowski', 'movie': 1967}\n"
+     ]
+    }
+   ],
    "source": [
     "###YOUR CODE HERE\n",
     "results = directed_coll.aggregate([\n",
@@ -1092,7 +1123,55 @@
     "        \"$project\": {\n",
     "            \"_id\": 0,\n",
     "            \"director\": \"$director.name\",\n",
-    "            \"movie\": \"$movie.title\"\n",
+    "            \"born\": \"$director.born\"\n",
+    "        }\n",
+    "    }\n",
+    "])\n",
+    "for result in results:\n",
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'director': 'Lana Wachowski', 'born': 1965}\n",
+      "{'director': 'Lilly Wachowski', 'born': 1967}\n"
+     ]
+    }
+   ],
+   "source": [
+    "### or\n",
+    "results = person_coll.aggregate([\n",
+    "    {\n",
+    "        \"$lookup\": {\n",
+    "            \"from\": \"directed\",\n",
+    "            \"localField\": \"id\",\n",
+    "            \"foreignField\": \"directorId\",\n",
+    "            \"as\": \"directed\"\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"$unwind\": \"$directed\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"$lookup\": {\n",
+    "            \"from\": \"movies\",\n",
+    "            \"localField\": \"directed.movieId\",\n",
+    "            \"foreignField\": \"id\",\n",
+    "            \"as\": \"movies\"\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"$project\": {\n",
+    "            \"_id\": 0,\n",
+    "            \"director\": \"$name\",\n",
+    "            \"born\": \"$born\"\n",
     "        }\n",
     "    }\n",
     "])\n",
